# avengercon_2024

./: .gitignore  .pre-commit-config.yaml  404.html  DockerfileAvengercon  DockerfileAvengerconDask  DockerfileAvengerconPrefect  LICENSE.txt  README.md  docker-compose.yaml  full_reset.sh  index.html  initialize_env.sh  mkdocs.yml  mypy.ini  pyproject.toml  run_dev.sh  soft_reset.sh  tox.ini
.github/workflows/: docs.yml  test.yml
avengercon/: __init__.py  __main__.py  config.py  logger.py  main.py
avengercon/api/: __init__.py  swagger.py
avengercon/api/v1/: __init__.py  route_hello.py  route_upload.py
avengercon/celery/: __init__.py  config.py  flows.py  tasks.py
avengercon/dask/: __init__.py  config.py  tasks.py
avengercon/data/: __init__.py
avengercon/minio/: __init__.py  config.py  schemas.py
avengercon/prefect/: __init__.py  config.py  flows.py  storage.py  tasks.py
avengercon/redis/: __init__.py  config.py  tasks.py
avengercon/schemas/: __init__.py
dask_examples/: workshop_example.ipynb
developers/cloudflare/: index.html
developers/docker/: index.html
developers/docs/: index.html
developers/gitlab_ci/: index.html
developers/os/: index.html
developers/postgres/: index.html
developers/sqlalchemy_alembic/: index.html
developers/testing/: index.html
developers/traefik/: index.html
docs/: index.md
docs/developers/: cloudflare.md  developer_references.md  docker.md  docs.md  gitlab_ci.md  os.md  postgres.md  sqlalchemy_alembic.md  testing.md  traefik.md
docs/stylesheets/: extra.css
docs/workshop/: 1_hello_workshop.md  2_pros_cons.md  3_dask.md  4_celery.md  5_beam.md
entrypoints/: gunicorn_conf.py  prestart.sh  start-reload.sh  start.sh
requirements/: requirements-coverage.txt  requirements-dev.txt  requirements-mkdocs.txt  requirements-mypy.txt  requirements-pytest.txt  requirements.txt
scripts/: enable_prefect_localhost_profile.sh  expand_quic_buffers.sh  export_poetry_to_req_txt.bat  export_poetry_to_req_txt.sh  force_poetry_shell.sh  setup_linux_kvm_amd.sh  update_tooling.bat  update_tooling.sh
search/: search_index.json
tests/: __init__.py  basic_test.py  conftest.py  fibonacci.csv  fibonacci.txt  test.yml  vertical_scale_test.py
workshop/1_hello_workshop/: index.html
workshop/2_pros_cons/: index.html
workshop/3_dask/: index.html
workshop/4_celery/: index.html
workshop/5_beam/: index.html
